[package]
name = "todos"
version = "1.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
anyhow = "1.0"
bincode = "2.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
heed = "0.22"
tempfile = "3.23"
axum = { version = "0.8", features = ["macros"] }
askama = "0.14"
evento = { path = "../../evento", version = "1.2.0", features = ["sqlite-migrator"] }
